tests/NormalTests/paczka1/small_fuzzy/85642077.err
Error in line 2: PwlDHmAGdfG A878 92,3
Error in line 1: Tunixc A878 19,1
Error in line 3: PwlDHmAGdfG S668 60,2
Error in line 9: PwlDHmAGdfG A878 109,5
Error in line 11: PwlDHmAGdfG S668 46,6
